--- a/src/coatcheck/lib.rs.html
+++ b/src/coatcheck/lib.rs.html
@@ -749,6 +749,30 @@
 <span id="707">707</span>
 <span id="708">708</span>
 <span id="709">709</span>
+<span id="710">710</span>
+<span id="711">711</span>
+<span id="712">712</span>
+<span id="713">713</span>
+<span id="714">714</span>
+<span id="715">715</span>
+<span id="716">716</span>
+<span id="717">717</span>
+<span id="718">718</span>
+<span id="719">719</span>
+<span id="720">720</span>
+<span id="721">721</span>
+<span id="722">722</span>
+<span id="723">723</span>
+<span id="724">724</span>
+<span id="725">725</span>
+<span id="726">726</span>
+<span id="727">727</span>
+<span id="728">728</span>
+<span id="729">729</span>
+<span id="730">730</span>
+<span id="731">731</span>
+<span id="732">732</span>
+<span id="733">733</span>
 </pre><pre class='rust '>
 <span class='doccomment'>//! # CoatCheck</span>
 <span class='doccomment'>//!</span>
@@ -1456,6 +1480,30 @@
             <span class='kw'>for</span> <span class='ident'>t</span> <span class='kw'>in</span> <span class='ident'>res</span>.<span class='ident'>into_iter</span>() {
                 <span class='kw'>let</span> _ <span class='op'>=</span> <span class='ident'>cc</span>.<span class='ident'>claim</span>(<span class='ident'>t</span>);
             }
+        });
+    }
+
+    <span class='attribute'>#[<span class='ident'>bench</span>]</span>
+    <span class='kw'>fn</span> <span class='ident'>bench_coat_check_access</span>(<span class='ident'>b</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>Bencher</span>) {
+        <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>cc</span> <span class='op'>=</span> <span class='ident'>CoatCheck</span>::<span class='ident'>new</span>();
+        <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>tickets</span> <span class='op'>=</span> <span class='ident'>Vec</span>::<span class='ident'>with_capacity</span>(<span class='number'>100</span>);
+        <span class='kw'>for</span> _ <span class='kw'>in</span> <span class='number'>0</span>..<span class='number'>100</span> {
+            <span class='ident'>tickets</span>.<span class='ident'>push</span>(<span class='ident'>cc</span>.<span class='ident'>check</span>(<span class='string'>&quot;something&quot;</span>));
+        }
+        <span class='kw'>let</span> <span class='kw-2'>ref</span> <span class='ident'>t</span> <span class='op'>=</span> <span class='ident'>tickets</span>[<span class='number'>20</span>];
+        <span class='ident'>b</span>.<span class='ident'>iter</span>(<span class='op'>|</span><span class='kw-2'>&amp;</span>: <span class='op'>|</span> {
+            <span class='ident'>test</span>::<span class='ident'>black_box</span>(<span class='kw-2'>&amp;</span><span class='ident'>cc</span>[<span class='op'>*</span><span class='ident'>t</span>]);
+        });
+    }
+
+    <span class='attribute'>#[<span class='ident'>bench</span>]</span>
+    <span class='kw'>fn</span> <span class='ident'>bench_hash_map_access</span>(<span class='ident'>b</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>Bencher</span>) {
+        <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>map</span> <span class='op'>=</span> <span class='ident'>HashMap</span>::<span class='ident'>with_capacity</span>(<span class='number'>100</span>);
+        <span class='kw'>for</span> <span class='ident'>i</span> <span class='kw'>in</span> <span class='number'>0i32</span>..<span class='number'>100</span> {
+            <span class='ident'>map</span>.<span class='ident'>insert</span>(<span class='ident'>i</span>, <span class='string'>&quot;something&quot;</span>);
+        }
+        <span class='ident'>b</span>.<span class='ident'>iter</span>(<span class='op'>|</span><span class='kw-2'>&amp;</span>:<span class='op'>|</span> {
+            <span class='ident'>test</span>::<span class='ident'>black_box</span>(<span class='kw-2'>&amp;</span><span class='ident'>map</span>[<span class='number'>20i32</span>]);
         });
     }
 }
