--- a/src/coatcheck/lib.rs.html
+++ b/src/coatcheck/lib.rs.html
@@ -727,6 +727,9 @@
 <span id="685">685</span>
 <span id="686">686</span>
 <span id="687">687</span>
+<span id="688">688</span>
+<span id="689">689</span>
+<span id="690">690</span>
 </pre><pre class='rust '>
 <span class='doccomment'>//! # CoatCheck</span>
 <span class='doccomment'>//!</span>
@@ -1338,14 +1341,15 @@
     <span class='doccomment'>/// Returns `Err(ClaimError)` if the ticket belongs to another `CoatCheck&lt;V&gt;` (returning the</span>
     <span class='doccomment'>/// ticket inside of the ClaimError).</span>
     <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>claim</span>(<span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='ident'>V</span>, <span class='ident'>ClaimError</span><span class='op'>&gt;</span> {
-        <span class='kw'>if</span> <span class='ident'>ticket</span>.<span class='ident'>tag</span> <span class='op'>!=</span> <span class='self'>self</span>.<span class='ident'>tag</span> {
-            <span class='prelude-val'>Err</span>(<span class='ident'>ClaimError</span> { <span class='ident'>ticket</span>: <span class='ident'>ticket</span>, <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> })
-        } <span class='kw'>else</span> {
-            <span class='comment'>// Safe because, if we&#39;ve handed out the ticket, this slot must exist.</span>
-            <span class='kw'>let</span> <span class='ident'>value</span> <span class='op'>=</span> <span class='kw'>unsafe</span> { <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>get_unchecked_mut</span>(<span class='ident'>ticket</span>.<span class='ident'>index</span>) }.<span class='ident'>empty</span>(<span class='self'>self</span>.<span class='ident'>next_free</span>);
-            <span class='self'>self</span>.<span class='ident'>next_free</span> <span class='op'>=</span> <span class='ident'>ticket</span>.<span class='ident'>index</span>;
-            <span class='self'>self</span>.<span class='ident'>size</span> <span class='op'>-=</span> <span class='number'>1</span>;
-            <span class='prelude-val'>Ok</span>(<span class='ident'>value</span>)
+        <span class='kw'>match</span> <span class='ident'>ticket</span> {
+            <span class='ident'>Ticket</span> { <span class='ident'>tag</span>, <span class='ident'>index</span> } <span class='kw'>if</span> <span class='ident'>tag</span> <span class='op'>==</span> <span class='self'>self</span>.<span class='ident'>tag</span> <span class='op'>=&gt;</span> {
+                <span class='comment'>// Safe because, if we&#39;ve handed out the ticket, this slot must exist.</span>
+                <span class='kw'>let</span> <span class='ident'>value</span> <span class='op'>=</span> <span class='kw'>unsafe</span> { <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>get_unchecked_mut</span>(<span class='ident'>index</span>) }.<span class='ident'>empty</span>(<span class='self'>self</span>.<span class='ident'>next_free</span>);
+                <span class='self'>self</span>.<span class='ident'>next_free</span> <span class='op'>=</span> <span class='ident'>index</span>;
+                <span class='self'>self</span>.<span class='ident'>size</span> <span class='op'>-=</span> <span class='number'>1</span>;
+                <span class='prelude-val'>Ok</span>(<span class='ident'>value</span>)
+            },
+            _ <span class='op'>=&gt;</span> <span class='prelude-val'>Err</span>(<span class='ident'>ClaimError</span> { <span class='ident'>ticket</span>: <span class='ident'>ticket</span>, <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> })
         }
     }
 
@@ -1354,14 +1358,15 @@
     <span class='doccomment'>/// Returns `Ok(&amp;value)` if the ticket belongs to this `CoatCheck&lt;V&gt;`.</span>
     <span class='doccomment'>/// Returns `Err(AccessError)` if the ticket belongs to another `CoatCheck&lt;V&gt;`.</span>
     <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>get</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='kw-2'>&amp;</span><span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='ident'>V</span>, <span class='ident'>AccessError</span><span class='op'>&gt;</span> {
-        <span class='kw'>if</span> <span class='ident'>ticket</span>.<span class='ident'>tag</span> <span class='op'>!=</span> <span class='self'>self</span>.<span class='ident'>tag</span> {
-            <span class='prelude-val'>Err</span>(<span class='ident'>AccessError</span> { <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> })
-        } <span class='kw'>else</span> {
-            <span class='comment'>// Safe because, if we&#39;ve handed out the ticket, this slot must exist.</span>
-            <span class='kw'>match</span> <span class='kw'>unsafe</span> { <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>get_unchecked</span>(<span class='ident'>ticket</span>.<span class='ident'>index</span>) } {
+        <span class='kw'>match</span> <span class='ident'>ticket</span> {
+            <span class='kw-2'>&amp;</span><span class='ident'>Ticket</span> { <span class='ident'>tag</span>, <span class='ident'>index</span> } <span class='kw'>if</span> <span class='ident'>tag</span> <span class='op'>==</span> <span class='self'>self</span>.<span class='ident'>tag</span> <span class='op'>=&gt;</span> <span class='kw'>match</span> <span class='kw'>unsafe</span> {
+                <span class='comment'>// Safe because, if we&#39;ve handed out the ticket, this slot must exist.</span>
+                <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>get_unchecked</span>(<span class='ident'>index</span>)
+            } {
                 <span class='kw-2'>&amp;</span><span class='ident'>Full</span>(<span class='kw-2'>ref</span> <span class='ident'>v</span>) <span class='op'>=&gt;</span> <span class='prelude-val'>Ok</span>(<span class='ident'>v</span>),
                 _ <span class='op'>=&gt;</span> <span class='macro'>panic</span><span class='macro'>!</span>(<span class='string'>&quot;forged ticket&quot;</span>),
-            }
+            },
+            _ <span class='op'>=&gt;</span>  <span class='prelude-val'>Err</span>(<span class='ident'>AccessError</span> { <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> })
         }
     }
 
@@ -1370,14 +1375,15 @@
     <span class='doccomment'>/// Returns `Ok(&amp;mut value)` if the ticket belongs to this `CoatCheck&lt;V&gt;`.</span>
     <span class='doccomment'>/// Returns `Err(AccessError)` if the ticket belongs to another `CoatCheck&lt;V&gt;`.</span>
     <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>get_mut</span>(<span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='kw-2'>&amp;</span><span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>V</span>, <span class='ident'>AccessError</span><span class='op'>&gt;</span> {
-        <span class='kw'>if</span> <span class='ident'>ticket</span>.<span class='ident'>tag</span> <span class='op'>!=</span> <span class='self'>self</span>.<span class='ident'>tag</span> {
-            <span class='prelude-val'>Err</span>(<span class='ident'>AccessError</span> { <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> })
-        } <span class='kw'>else</span> {
-            <span class='comment'>// Safe because, if we&#39;ve handed out the ticket, this slot must exist.</span>
-            <span class='kw'>match</span> <span class='kw'>unsafe</span> { <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>get_unchecked_mut</span>(<span class='ident'>ticket</span>.<span class='ident'>index</span>) } {
+        <span class='kw'>match</span> <span class='ident'>ticket</span> {
+            <span class='kw-2'>&amp;</span><span class='ident'>Ticket</span> { <span class='ident'>tag</span>, <span class='ident'>index</span> } <span class='kw'>if</span> <span class='ident'>tag</span> <span class='op'>==</span> <span class='self'>self</span>.<span class='ident'>tag</span> <span class='op'>=&gt;</span> <span class='kw'>match</span> <span class='kw'>unsafe</span> {
+                <span class='comment'>// Safe because, if we&#39;ve handed out the ticket, this slot must exist.</span>
+                <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>get_unchecked_mut</span>(<span class='ident'>index</span>)
+            } {
                 <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>Full</span>(<span class='kw-2'>ref</span> <span class='kw-2'>mut</span> <span class='ident'>v</span>) <span class='op'>=&gt;</span> <span class='prelude-val'>Ok</span>(<span class='ident'>v</span>),
                 _ <span class='op'>=&gt;</span> <span class='macro'>panic</span><span class='macro'>!</span>(<span class='string'>&quot;forged ticket&quot;</span>),
-            }
+            },
+            _ <span class='op'>=&gt;</span>  <span class='prelude-val'>Err</span>(<span class='ident'>AccessError</span> { <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> })
         }
     }
 }
