--- a/coatcheck/stability.html
+++ b/coatcheck/stability.html
@@ -47,12 +47,10 @@ its children (percentages total for coatcheck):
 <blockquote>
 <a class='stability Stable'></a> stable (20%),<br/>
 <a class='stability Unstable'></a> unstable (18%),<br/>
-<a class='stability Experimental'></a> experimental (0%),<br/>
-<a class='stability Deprecated'></a> deprecated (0%),<br/>
 <a class='stability Unmarked'></a> unmarked (61%)
 </blockquote>
 The counts do not include methods or trait
-implementations that are visible only through a re-exported type.<table><tr><td><a href='index.html'>coatcheck</a></td><td class='summary-column'><span class='summary Stable' style='width: 20.4545%; display: inline-block'>&nbsp</span><span class='summary Unstable' style='width: 18.1818%; display: inline-block'>&nbsp</span><span class='summary Experimental' style='width: 0.0000%; display: inline-block'>&nbsp</span><span class='summary Deprecated' style='width: 0.0000%; display: inline-block'>&nbsp</span><span class='summary Unmarked' style='width: 61.3636%; display: inline-block'>&nbsp</span></td></tr></table></section>
+implementations that are visible only through a re-exported type.<table><tr><td><a href='index.html'>coatcheck</a></td><td class='summary-column'><span class='summary Stable' style='width: 20.4545%; display: inline-block'>&nbsp</span><span class='summary Unstable' style='width: 18.1818%; display: inline-block'>&nbsp</span><span class='summary Unmarked' style='width: 61.3636%; display: inline-block'>&nbsp</span></td></tr></table></section>
     <section id='search' class="content hidden"></section>
 
     <section class="footer"></section>
